--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "scripts": {
     "dev": "vuepress dev docs --host \"localhost\"",
     "build": "vuepress build docs",
-    "deploy": "bash deploy-gh.sh"
+    "deploy": "bash deploy-gh.sh",
+
+    "dev-local": "SET NODE_OPTIONS=--openssl-legacy-provider && vuepress dev docs --host \"localhost\"",
+    "build-local": "SET NODE_OPTIONS=--openssl-legacy-provider && vuepress build docs",
+    "deploy-local": "SET NODE_OPTIONS=--openssl-legacy-provider && bash deploy-gh.sh"
   },
   "devDependencies": {
     "vuepress": "1.9.7",
-    "vuepress-theme-reco": "^1.6.16"
+    "vuepress-theme-reco": "1.6.5"
   },
   "description": "",
   "dependencies": {
